--- a/Proyecto Fase 1/bin/.gitignore
+++ b/Proyecto Fase 1/bin/.gitignore
@@ -7,3 +7,13 @@
 /Principal$actionlistener.class
 /Principal.class
 /Recicladora.class
+/Pincipalv2$1.class
+/Pincipalv2.class
+/Principalv2$1.class
+/Principalv2$2.class
+/Principalv2$actionlistener.class
+/Principalv2.class
+/Menu$1.class
+/Menu$2.class
+/Menu$3.class
+/Menu.class
