--- a/Fase 2/bin/.gitignore
+++ b/Fase 2/bin/.gitignore
@@ -1,14 +1,18 @@
 /CiudadVerde.class
+/Conector.class
 /ControladorConversiones.class
 /Conversiones.class
+/Empresa.class
 /Principal$1.class
 /Principal$actionlistener.class
 /Principal.class
 /Recicladora.class
-<<<<<<< HEAD
-=======
-/Vigua.jpg
-/Conector.class
 /Usuarios.class
-/Empresa.class
->>>>>>> 4057573fbf4ec4ca4ad831e98b3ee9c9c1e7db3a
+/Principal$2.class
+/Principal$3.class
+/main$1.class
+/main$2.class
+/main$3.class
+/main$4.class
+/main$actionlistener.class
+/main.class
