--- a/Fase 2/bin/.gitignore
+++ b/Fase 2/bin/.gitignore
@@ -10,7 +10,12 @@
 /main$1.class
 /main$2.class
 /main$3.class
-/main$4.class
 /main$actionlistener.class
-/main.class
 /main$menuListener.class
+/main.class
+/Principal$1.class
+/Principal$2.class
+/Principal$3.class
+/Principal$actionlistener.class
+/Principal$menuListener.class
+/Principal.class
