Conectando base de datos

--- a/Fase 2/bin/.gitignore
+++ b/Fase 2/bin/.gitignore
@@ -1,22 +1,4 @@
-/CiudadVerde.class
-/Conector.class
-/ControladorConversiones.class
-/Conversiones.class
-/Empresa.class
-/Errores.class
-/Recicladora.class
-/Usuarios.class
-/Vigua.jpg
-/main$1.class
-/main$2.class
-/main$3.class
-/main$actionlistener.class
-/main$menuListener.class
-/main.class
-/Principal$1.class
-/Principal$2.class
-/Principal$3.class
-/Principal$actionlistener.class
-/Principal$menuListener.class
-/Principal.class
-/org/
+/GUI$1.class
+/GUI$actionlistener.class
+/GUI$menuListener.class
+/GUI.class
