Dinero que se ahorra la industria y dinero que paga la recicladora

--- a/Fase 2/bin/.gitignore
+++ b/Fase 2/bin/.gitignore
@@ -1,6 +1,14 @@
+/CiudadVerde.class
+/Conector.class
+/ControladorConversiones.class
+/Conversiones.class
+/Empresa.class
 /GUI$1.class
 /GUI$actionlistener.class
 /GUI$menuListener.class
 /GUI.class
+/Recicladora.class
+/Usuarios.class
+/Vigua.jpg
+/org/
 /reciclaje.jpg
-/Conector.class
